cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09833_419932459.yaml
Resources:
  solidusapitestDBSecretBCF3A7A9:
    Type: AWS::SecretsManager::Secret
    Properties:
      GenerateSecretString:
        PasswordLength: 26
      Name: solidus-test-eks/solidusDbPassword
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testDBSecret/Resource
  solidusapitestVpc15889874:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/Resource
  solidusapitestVpcPublicSubnet1SubnetF2C1D152:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: solidusapitestVpc15889874
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PublicSubnet1/Subnet
  solidusapitestVpcPublicSubnet1RouteTable70A6CA6B:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: solidusapitestVpc15889874
      Tags:
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PublicSubnet1/RouteTable
  solidusapitestVpcPublicSubnet1RouteTableAssociationB788ECD0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: solidusapitestVpcPublicSubnet1RouteTable70A6CA6B
      SubnetId:
        Ref: solidusapitestVpcPublicSubnet1SubnetF2C1D152
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PublicSubnet1/RouteTableAssociation
  solidusapitestVpcPublicSubnet1DefaultRoute719460E2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: solidusapitestVpcPublicSubnet1RouteTable70A6CA6B
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: solidusapitestVpcIGW070DA62C
    DependsOn:
      - solidusapitestVpcVPCGWC47CC8A7
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PublicSubnet1/DefaultRoute
  solidusapitestVpcPublicSubnet1EIP29962C4E:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PublicSubnet1/EIP
  solidusapitestVpcPublicSubnet1NATGatewayDC3784CE:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: solidusapitestVpcPublicSubnet1SubnetF2C1D152
      AllocationId:
        Fn::GetAtt:
          - solidusapitestVpcPublicSubnet1EIP29962C4E
          - AllocationId
      Tags:
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PublicSubnet1/NATGateway
  solidusapitestVpcPublicSubnet2SubnetE13B99D4:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: solidusapitestVpc15889874
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PublicSubnet2/Subnet
  solidusapitestVpcPublicSubnet2RouteTable5EB5C511:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: solidusapitestVpc15889874
      Tags:
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PublicSubnet2/RouteTable
  solidusapitestVpcPublicSubnet2RouteTableAssociation00D831C8:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: solidusapitestVpcPublicSubnet2RouteTable5EB5C511
      SubnetId:
        Ref: solidusapitestVpcPublicSubnet2SubnetE13B99D4
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PublicSubnet2/RouteTableAssociation
  solidusapitestVpcPublicSubnet2DefaultRouteEE8AD59C:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: solidusapitestVpcPublicSubnet2RouteTable5EB5C511
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: solidusapitestVpcIGW070DA62C
    DependsOn:
      - solidusapitestVpcVPCGWC47CC8A7
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PublicSubnet2/DefaultRoute
  solidusapitestVpcPublicSubnet2EIPEDE303AF:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PublicSubnet2/EIP
  solidusapitestVpcPublicSubnet2NATGatewayEAFEA7E8:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: solidusapitestVpcPublicSubnet2SubnetE13B99D4
      AllocationId:
        Fn::GetAtt:
          - solidusapitestVpcPublicSubnet2EIPEDE303AF
          - AllocationId
      Tags:
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PublicSubnet2/NATGateway
  solidusapitestVpcPrivateSubnet1Subnet312100DA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: solidusapitestVpc15889874
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PrivateSubnet1/Subnet
  solidusapitestVpcPrivateSubnet1RouteTableCCAD212A:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: solidusapitestVpc15889874
      Tags:
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PrivateSubnet1/RouteTable
  solidusapitestVpcPrivateSubnet1RouteTableAssociation6B60042C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: solidusapitestVpcPrivateSubnet1RouteTableCCAD212A
      SubnetId:
        Ref: solidusapitestVpcPrivateSubnet1Subnet312100DA
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PrivateSubnet1/RouteTableAssociation
  solidusapitestVpcPrivateSubnet1DefaultRouteFBB806F6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: solidusapitestVpcPrivateSubnet1RouteTableCCAD212A
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: solidusapitestVpcPublicSubnet1NATGatewayDC3784CE
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PrivateSubnet1/DefaultRoute
  solidusapitestVpcPrivateSubnet2SubnetB34A66BE:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: solidusapitestVpc15889874
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PrivateSubnet2/Subnet
  solidusapitestVpcPrivateSubnet2RouteTable64E0EE0B:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: solidusapitestVpc15889874
      Tags:
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PrivateSubnet2/RouteTable
  solidusapitestVpcPrivateSubnet2RouteTableAssociationAE1D6528:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: solidusapitestVpcPrivateSubnet2RouteTable64E0EE0B
      SubnetId:
        Ref: solidusapitestVpcPrivateSubnet2SubnetB34A66BE
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PrivateSubnet2/RouteTableAssociation
  solidusapitestVpcPrivateSubnet2DefaultRoute2BE3EDA3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: solidusapitestVpcPrivateSubnet2RouteTable64E0EE0B
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: solidusapitestVpcPublicSubnet2NATGatewayEAFEA7E8
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/PrivateSubnet2/DefaultRoute
  solidusapitestVpcIGW070DA62C:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: solidus-test-eks/solidus-api-testVpc
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/IGW
  solidusapitestVpcVPCGWC47CC8A7:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: solidusapitestVpc15889874
      InternetGatewayId:
        Ref: solidusapitestVpcIGW070DA62C
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testVpc/VPCGW
  solidusapitestDBSubnets56712D74:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnets for solidus-api-testDB database
      SubnetIds:
        - Ref: solidusapitestVpcPrivateSubnet1Subnet312100DA
        - Ref: solidusapitestVpcPrivateSubnet2SubnetB34A66BE
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testDB/Subnets/Default
  solidusapitestDBSecurityGroupB9BBFA09:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS security group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: solidusapitestVpc15889874
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testDB/SecurityGroup/Resource
  solidusapitestDB5C006E08:
    Type: AWS::RDS::DBCluster
    Properties:
      Engine: aurora-mysql
      DatabaseName: eks_api_prod
      DBClusterParameterGroupName: default.aurora-mysql5.7
      DBSubnetGroupName:
        Ref: solidusapitestDBSubnets56712D74
      EngineMode: serverless
      MasterUsername: adminM3pls
      MasterUserPassword:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: solidusapitestDBSecretBCF3A7A9
            - :SecretString:::}}
      ScalingConfiguration:
        AutoPause: true
        MaxCapacity: 32
        MinCapacity: 8
        SecondsUntilAutoPause: 600
      StorageEncrypted: true
      VpcSecurityGroupIds:
        - Fn::GetAtt:
            - solidusapitestDBSecurityGroupB9BBFA09
            - GroupId
    UpdateReplacePolicy: Snapshot
    DeletionPolicy: Snapshot
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testDB/Resource
  solidusapitestAppLBDEEA577F:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - solidusapitestAppLBSecurityGroupB301B715
            - GroupId
      Subnets:
        - Ref: solidusapitestVpcPublicSubnet1SubnetF2C1D152
        - Ref: solidusapitestVpcPublicSubnet2SubnetE13B99D4
      Type: application
    DependsOn:
      - solidusapitestVpcPublicSubnet1DefaultRoute719460E2
      - solidusapitestVpcPublicSubnet2DefaultRouteEE8AD59C
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/LB/Resource
  solidusapitestAppLBSecurityGroupB301B715:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatically created Security Group for ELB solidustestekssolidusapitestAppLB294CDE14
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 80
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Ref: solidusapitestVpc15889874
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/LB/SecurityGroup/Resource
  solidusapitestAppLBSecurityGrouptosolidustestekssolidusapitestAppServiceSecurityGroup65C7CD6E3000BEBE8E8D:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId:
        Fn::GetAtt:
          - solidusapitestAppLBSecurityGroupB301B715
          - GroupId
      IpProtocol: tcp
      Description: Load balancer to target
      DestinationSecurityGroupId:
        Fn::GetAtt:
          - solidusapitestAppServiceSecurityGroup3ADADBC1
          - GroupId
      FromPort: 3000
      ToPort: 3000
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/LB/SecurityGroup/to solidustestekssolidusapitestAppServiceSecurityGroup65C7CD6E:3000
  solidusapitestAppLBPublicListener154AF583:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: solidusapitestAppLBPublicListenerECSGroup4ADD115D
          Type: forward
      LoadBalancerArn:
        Ref: solidusapitestAppLBDEEA577F
      Port: 80
      Protocol: HTTP
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/LB/PublicListener/Resource
  solidusapitestAppLBPublicListenerECSGroup4ADD115D:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId:
        Ref: solidusapitestVpc15889874
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/LB/PublicListener/ECSGroup/Resource
  solidusapitestAppTaskDefTaskRole2F0D0A24:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/TaskDef/TaskRole/Resource
  solidusapitestAppTaskDefE820CB83:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Environment:
            - Name: RAILS_ENV
              Value: production
            - Name: RAILS_MAX_THREADS
              Value: "5"
            - Name: DB_PASSWORD
              Value:
                Fn::Join:
                  - ""
                  - - "{{resolve:secretsmanager:"
                    - Ref: solidusapitestDBSecretBCF3A7A9
                    - :SecretString:::}}
            - Name: DB_USERNAME
              Value: adminM3pls
            - Name: DB_HOST
              Value:
                Fn::GetAtt:
                  - solidusapitestDB5C006E08
                  - Endpoint.Address
            - Name: DB_PORT
              Value: "-1.888154589708815e+289"
            - Name: DB_NAME
              Value: eks_api_prod
          Essential: true
          Image:
            Fn::Sub: ${AWS::AccountId}.dkr.ecr.${AWS::Region}.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}:7608fee00f09e2666159d1efe4fbd1d97de6afd86da99844a62b99cf3a9421d7
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: solidusapitestAppTaskDefwebLogGroupD8B5782E
              awslogs-stream-prefix: solidus-api-testApp
              awslogs-region:
                Ref: AWS::Region
          Name: web
          PortMappings:
            - ContainerPort: 3000
              Protocol: tcp
      Cpu: "512"
      ExecutionRoleArn:
        Fn::GetAtt:
          - solidusapitestAppTaskDefExecutionRole9F2F5EC9
          - Arn
      Family: solidustestekssolidusapitestAppTaskDefDB713343
      Memory: "1024"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - solidusapitestAppTaskDefTaskRole2F0D0A24
          - Arn
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/TaskDef/Resource
  solidusapitestAppTaskDefwebLogGroupD8B5782E:
    Type: AWS::Logs::LogGroup
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/TaskDef/web/LogGroup/Resource
  solidusapitestAppTaskDefExecutionRole9F2F5EC9:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/TaskDef/ExecutionRole/Resource
  solidusapitestAppTaskDefExecutionRoleDefaultPolicy6F535816:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ecr:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :repository/
                  - Fn::Sub: cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - solidusapitestAppTaskDefwebLogGroupD8B5782E
                - Arn
        Version: "2012-10-17"
      PolicyName: solidusapitestAppTaskDefExecutionRoleDefaultPolicy6F535816
      Roles:
        - Ref: solidusapitestAppTaskDefExecutionRole9F2F5EC9
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/TaskDef/ExecutionRole/DefaultPolicy/Resource
  solidusapitestAppService92781D54:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: EcsDefaultClusterMnL3mNNYNsolidusapitestVpc404131A3
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 1
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: web
          ContainerPort: 3000
          TargetGroupArn:
            Ref: solidusapitestAppLBPublicListenerECSGroup4ADD115D
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - solidusapitestAppServiceSecurityGroup3ADADBC1
                - GroupId
          Subnets:
            - Ref: solidusapitestVpcPrivateSubnet1Subnet312100DA
            - Ref: solidusapitestVpcPrivateSubnet2SubnetB34A66BE
      TaskDefinition:
        Ref: solidusapitestAppTaskDefE820CB83
    DependsOn:
      - solidusapitestAppLBPublicListenerECSGroup4ADD115D
      - solidusapitestAppLBPublicListener154AF583
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/Service/Service
  solidusapitestAppServiceSecurityGroup3ADADBC1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: solidus-test-eks/solidus-api-testApp/Service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: solidusapitestVpc15889874
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/Service/SecurityGroup/Resource
  solidusapitestAppServiceSecurityGroupfromsolidustestekssolidusapitestAppLBSecurityGroup556123FB300014D24BA3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 3000
      GroupId:
        Fn::GetAtt:
          - solidusapitestAppServiceSecurityGroup3ADADBC1
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - solidusapitestAppLBSecurityGroupB301B715
          - GroupId
      ToPort: 3000
    Metadata:
      aws:cdk:path: solidus-test-eks/solidus-api-testApp/Service/SecurityGroup/from solidustestekssolidusapitestAppLBSecurityGroup556123FB:3000
  EcsDefaultClusterMnL3mNNYNsolidusapitestVpc404131A3:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: solidus-test-eks/EcsDefaultClusterMnL3mNNYNsolidus-api-testVpc/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/31Ty27bMBD8ltxpNjZ66NWPNDAQtIJi5GqsqI3KWCIFLunAEPTvXVKyrCZFTpwdjpazQ2ol7+X9wim5+n4H77RQ5WlR60J2zx7USTB17AiVQ08NGKjQ8VaqxfbVDKgXqFaye2lV5F6yrchCUWv1HAoz6iaU2+DxAEWNN/7GrYms0uC1NZM4god9Fpdf4B/B4ztcROb0meGt8d54dIyvgsHJWK09T/OnQeMFWw5O+8ujs6EdZ/iCeKgcEn2i9ybxvXAlxUDcGV3NxLYOxD7E4Gtqudt8IkZlzI6OLfjonuS6bTm4FMCThXIDNRiF5U9wVZyWz9EKBdZAXquaFUVSaFOd+Qb+/7WLB/5Tz3WaXZhRc8Wz/QOfPPM9K5Nz2Y3WDkCnHb5qo6+X95GxxoPm7jPuw1gp5BGOOTI1BaWhkV1uh5eT1syyzXTVA4qW3BGI+LXKnVUndP [...]
    Metadata:
      aws:cdk:path: solidus-test-eks/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Outputs:
  solidusapitestAppLoadBalancerDNSB418B65D:
    Value:
      Fn::GetAtt:
        - solidusapitestAppLBDEEA577F
        - DNSName
  solidusapitestAppServiceURL7D441FF2:
    Value:
      Fn::Join:
        - ""
        - - http://
          - Fn::GetAtt:
              - solidusapitestAppLBDEEA577F
              - DNSName
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store.
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
